--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,6 +8,8 @@
 
 hide_window_decorations yes
 enable_audio_bell no
+dynamic_background_opacity yes
+background_opacity 0.5
 
 # The basic colors
 foreground              #cdd6f4
